backend/kubernetesConfig/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /auth/health
        pathType: Prefix
        backend:
          service:
            name: authservice
            port:
              number: 3000
      - path: /auth/authenticate/v1/signup
        pathType: Prefix
        backend:
          service:
            name: authservice
            port:
              number: 3000
      - path: /notify
        pathType: Prefix
        backend:
          service:
            name: notifyservice
            port:
              number: 3001
